--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h3 {
 	text-transform: uppercase;
 	font-size: 36px; 
 	font-weight: 700;
-	line-height: 90px;	
+	line-height: 83px;	
 	color: #c1c1c1;
 	margin: 0;
 	padding: 0;
@@ -49,6 +49,10 @@ h4 {
 	padding: 0;	
 }
 
+a {
+	text-decoration: none;
+	color: #fff;
+}
 
 /*--------------------HEADER--------------------*/
 
@@ -82,13 +86,15 @@ header{
 	width: 191px;
 	height: auto;
 	z-index: 1;
-	margin-top: 45px;
+	margin-top: 22px;
 }
 
 .banner-tittle {
 	position: relative;
 	z-index: 1;
 	width: 80%;	
+	padding-top: 90px;
+	letter-spacing: 3px;
 }
 
 .line1 {
@@ -103,7 +109,7 @@ header{
 	display: flex;
 	z-index: 1;
 	text-transform: uppercase;
-	padding-bottom: 110px;
+	padding-bottom: 87px;
 	font-size: 14px;
 }
 
@@ -119,7 +125,7 @@ header{
 	background-color: #5e42b0;
 	border-radius: 38px;
 	margin: 25px;
-  	
+  	text-decoration: none;
 }
 
 .ios::before {
@@ -168,7 +174,7 @@ header{
 
 .wrapper_block1 {
 	width: auto;
-	height: 1761px;
+/*	height: 1761px;*/
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -177,7 +183,7 @@ header{
 }
 
 .white1 {
-	height: 23.5%;
+/*	height: 23.5%;*/
 	width: auto;
 	background-color: #fff;
 	display: flex;
@@ -189,7 +195,21 @@ header{
 	display: flex;
 	justify-content: flex-start;
 	width: 47.5%;
-	height: 100%;
+	margin-bottom: 70px;
+
+	/*height: 100%;*/
+}
+
+.gray .white_position {
+	margin-bottom: 57px;
+}
+
+/*.violet .white_position .white_content {
+	margin-top: 23px;
+}*/
+
+.violet .white_position {
+	margin: 24px 0 54px;
 }
 
 .white_content {
@@ -197,13 +217,19 @@ header{
 	flex-direction: column;
 	align-items: flex-start;
 	width: 76%;
-	height: 100%;
+	margin-left: 10px;
+	/*height: 100%;*/
+}
+
+.white_big_tittle {
+	margin-top: 46px; 
 }
 
 .white_tittle {
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
+	margin-top: 9px;
 }
 
 .number {
@@ -213,10 +239,10 @@ header{
 }
 
 .underline {
-  border-radius: 2px;
-  background-color: #5e42b0;
-  width: 19px;
-  height: 5px;
+    border-radius: 2px;
+    background-color: #5e42b0;
+    width: 19px;
+    height: 5px;
 }
 
 .gray {
@@ -249,7 +275,7 @@ header{
 }
 
 .white2 {
-	height: 25.5%;
+/*	height: 25.5%;*/
 	width: auto;
 	background-color: #fff;
 	display: flex;
@@ -261,7 +287,8 @@ header{
 	display: flex;
 	justify-content: flex-end;
 	width: 52.5%;
-	height: 100%;
+	margin-bottom: 70px;
+	/*height: 100%;*/
 }
 
 .white2_content {
@@ -269,7 +296,8 @@ header{
 	flex-direction: column;
 	align-items: flex-start;
 	width: 76%;
-	height: 100%;
+	margin-right: 50px;
+	/*height: 100%;*/
 }
 
 .gray2 {
@@ -280,12 +308,25 @@ header{
 	align-items: flex-end;
 }
 
+.gray2 .white2_position .white2_content {
+	padding-bottom: 20px;
+	padding-top: 5px;
+}
+
 .dark_purple {
 	background-color: #0a0e34;
 	height: 11.1%;
 	width: auto;
 	flex-direction: column;
 	align-items: flex-end;
+}
+
+.dark_purple .white2_position .white2_content {
+	margin-top: 25px;
+}
+
+.dark_purple .white2_position {
+	margin-bottom: 52px;
 }
 
 .number3 {
@@ -303,26 +344,21 @@ header{
 }
 
 .athlet_img {
-	width: 100%;
-	height: 51.5%;
-	display: flex;
-	justify-content: flex-end;
-	align-items: flex-start;
+	width: 632px;
+	position: absolute;
+	right: 47%;
 }
 
 .athlets {
 	height: 100%;
 	padding-top: 1.6%;
-	padding-right: 50%;	
-	background-repeat: no-repeat;
 }
 
 .player_img {
 	width: 100%;
 	height: 46.5%;
-	display: flex;
-	justify-content: flex-start;
-	align-items: flex-start;
+	position: absolute;
+	top: 52%;
 }
 
 .players {
@@ -341,7 +377,7 @@ header{
 
 
 .wrapper_block2 {
-	height: 2190px;
+	/*height: 2190px;*/
 	width: auto;
 	background-color: #fff;
 	color: #000;
@@ -349,17 +385,26 @@ header{
 }
 
 .active {
-	height: 33.3%;
+/*	height: 33.3%;*/
 	width: auto;
 	overflow: hidden;
 	display: flex;
 	position: relative;
 }
 
+.b2txt {
+	padding-top: 34px;
+}
+
+.active_img_1 {
+		width: 50%; 
+/*		background-position: top right; 
+		background-image: url("../img/be-active_960.jpg");
+		background-repeat: no-repeat;*/
+}
+
 .active_img {
-	width: 50%;
-	background-size: cover;
-	background-repeat: no-repeat;	
+	max-width: 100%;
 }
 
 .active_text {
@@ -370,8 +415,8 @@ header{
 .active_text_content {
 	width: 60%;
 	position: relative;
-	top: calc(50% - 27%/2);
-	left: calc(50% - 50%/2);
+	top: 27%;
+	left: 13%;
 }
 
 .box_number {
@@ -379,7 +424,7 @@ header{
 	width: 168px;
 	height: 155px;
 	background-color: #5e42b0;
-	top: calc(50% - 155px/2);
+	top: 29%;
 	left: calc(50% - 168px/2);
 	color: #fff;
 }
@@ -398,7 +443,7 @@ header{
 }
 
 .contact {
-	height: 33.4%;
+	/*height: 33.4%;*/
 	width: auto;
 	overflow: hidden;
 	display: flex;
@@ -408,12 +453,12 @@ header{
 .contact_text_content {
 	width: 67%;
 	position: relative;
-	top: calc(50% - 27%/2);
-	left: calc(50% - 50%/2);
+	top: 26%;
+	left: 20%;
 }
 
 .work {
-	height: 33.3%;
+	/*height: 33.3%;*/
 	width: auto;
 	overflow: hidden;
 	display: flex;
@@ -423,8 +468,8 @@ header{
 .work_text_content {
 	width: 62%;
 	position: relative;
-	top: calc(50% - 27%/2);
-	left: calc(50% - 50%/2);
+	top: 26%;
+	left: 13%;
 }
 
 
@@ -438,7 +483,7 @@ footer {
 	background-size: cover;
 	position: relative;
 	width: auto;
-	height: 100vh;
+	/*height: 100vh;*/
 	min-height: 600px;
 	display: flex;
 	flex-direction: column;
@@ -460,8 +505,7 @@ footer {
 
 .footer_tittle {
 	position: relative;
-	z-index: 1;
-	width: 48%;	
+	z-index: 1;	
 	display: flex;
 	justify-content: space-between;
 	margin-top: 12%;
@@ -472,6 +516,7 @@ footer {
 	height: 137px;	
 	border-radius: 30px;
 	padding: 24px 14px;
+	margin-right: 28px;
 	background: linear-gradient(#7756d7, #50379b);
 }
 
@@ -481,6 +526,11 @@ footer {
 	z-index: 1;
 	margin-bottom: 2.7%;
 }
+
+footer .app-btns {
+		margin: 7% 0 12%;
+		padding-bottom: 0px;
+	}
 
 
 
@@ -535,6 +585,7 @@ footer {
 		flex-direction: column;
 		height: auto;
 	}
+
 
 	.active_img {
 		width: 100%;	
@@ -782,4 +833,10 @@ footer {
 		width: 133px;
 	}
 
+}
+
+.pixel-perfect {
+  position: absolute;
+  top: -22px;
+  opacity: 0.15;
 }
