--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ h2 {
 	color: #e7e7e7;
 	margin: 0;
 	padding: 57px 0;
-	/*line-height: 200px;*/
 }
 
 h3 {
@@ -54,11 +53,15 @@ a {
 	color: #fff;
 }
 
+span {
+	display: block;
+}
+
 /*--------------------HEADER--------------------*/
 
 
 
-header{
+header {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -69,7 +72,8 @@ header{
 	position: relative;
 }   
 
-.header-overlay {
+header::after {
+	content: " ";
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -170,190 +174,135 @@ header{
 /*--------------------BLOCK1--------------------*/
 
 
-
-.wrapper_block1 {
-	width: auto;
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	color: #000000;
-	font-size: 125%;
-}
-
-.white1 {
-	width: auto;
-	background-color: #fff;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-}
-
-.white_position {
-	display: flex;
-	justify-content: flex-start;
-	width: 47.5%;
-	margin-bottom: 70px;
-}
-
-.gray .white_position {
-	margin-bottom: 57px;
-}
-
-.violet .white_position {
-	margin: 24px 0 54px;
-}
-
-.white_content {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	width: 76%;
-	margin-left: 10px;
-}
-
-.white_big_tittle {
-	margin-top: 46px; 
-}
-
-.white_tittle {
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	margin-top: 9px;
-}
-
-.number {
-	font-size: 90%;
-	padding-right: 12px; 
-	font-weight: 700;
-}
-
-.underline {
-    border-radius: 2px;
-    background-color: #5e42b0;
-    width: 19px;
-    height: 5px;
-}
-
-.gray {
-	background-color: #f6f4fa;
-	height: 14.2%;
-	width: auto;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-}
-
-.violet {
-	background-color: #5e42b0;
-	height: 12.6%;
-	width: auto;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-}
-
-.violet_text {
-	color: #fff;
-}
-
-.underline_white {
-    border-radius: 2px;
-    background-color: #fff;
-    width: 19px;
-    height: 5px;
-}
-
-.white2 {
-	width: auto;
-	background-color: #fff;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-}
-
-.white2_position {
-	display: flex;
-	justify-content: flex-end;
-	width: 52.5%;
-	margin-bottom: 70px;
-}
-
-.white2_content {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	width: 76%;
-	margin-right: 50px;
-}
-
-.gray2 {
-	background-color: #f5f6f7;
-	height: 13%;
-	width: auto;
-	flex-direction: column;
-	align-items: flex-end;
-}
-
-.gray2 .white2_position .white2_content {
-	padding-bottom: 20px;
-	padding-top: 5px;
-}
-
-.dark_purple {
-	background-color: #0a0e34;
-	width: auto;
-	flex-direction: column;
-	align-items: flex-end;
-}
-
-.dark_purple .white2_position .white2_content {
-	margin-top: 25px;
-}
-
-.dark_purple .white2_position {
-	margin-bottom: 52px;
-}
-
-.number3 {
-	padding-right: 12px; 
-	font-weight: 700;
-	color: #9173e6;
-}
-
-.athlets_players {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-}
-
-.athlet_img {
-	width: 632px;
-	position: absolute;
-	right: 47%;
+.athlets p {
+	width: 70%;
 }
 
 .athlets {
-	height: 100%;
-	padding-top: 1.6%;
+	background-color: #fff;
+	position: relative;
+	color: #000000;
+	font-size: 125%;
+	overflow: hidden;
 }
 
-.player_img {
-	width: 100%;
-	height: 46.5%;
-	position: absolute;
-	top: 52%;
+.athlets h2 {
+	padding: 5% 0 0 53%;
 }
+
+.ath_img {
+	position: absolute;
+	top: 3%;
+	right: 50%;
+}
+
+.white_1 {
+	padding: 3.5% 0 3% 53%;
+}
+
+.white_1 h3::before {
+	content: "01";
+	font-size: 18px;
+	color: #000;
+	margin-right: 10px;
+	margin-right: 10px;
+	border-bottom: 5px solid #5e42b0;
+}
+
+.gray_1 {
+	padding: 1.5% 0 2.7% 53%;
+	background-color: #f6f4fa;
+}
+
+.gray_1 h3::before {
+	content: "02";
+	font-size: 18px;
+	color: #000;
+	margin-right: 10px;
+	margin-right: 10px;
+	border-bottom: 5px solid #5e42b0;
+}
+
+.violet_1 {
+	padding: 1.7% 0 2.7% 53%;
+	background-color: #5e42b0;
+	color: #fff;
+}
+
+.violet_1 h3::before {
+	content: "03";
+	font-size: 18px;
+	color: #000;
+	margin-right: 10px;
+	margin-right: 10px;
+	border-bottom: 5px solid #fff;
+}
+
 
 .players {
-	height: 100%;
-	padding-left: 42%;
-	background-repeat: no-repeat;
+	background-color: #fff;
+	position: relative;
+	color: #000000;
+	font-size: 125%;
+	overflow: hidden;
 }
 
-.box_content .number {
-	font-size: 24px;
+.players p {
+	width: 40%;
+}
+
+.players h2 {
+	padding: 5.5% 0 0 9.7%;
+}
+
+.play_img {
+	position: absolute;
+	top: 3%;
+	left: 42%;
+}
+
+.white_2 {
+	padding: 3.5% 0 3% 9.7%;
+}
+
+.white_2 h3::before {
+	content: "01";
+	font-size: 18px;
+	color: #000;
+	margin-right: 10px;
+	margin-right: 10px;
+	border-bottom: 5px solid #5e42b0;
+}
+
+
+.gray_2 {
+	padding: 1.5% 0 4.5% 9.7%;
+	background-color: #f6f4fa;
+}
+
+.gray_2 h3::before {
+	content: "02";
+	font-size: 18px;
+	color: #000;
+	margin-right: 10px;
+	margin-right: 10px;
+	border-bottom: 5px solid #5e42b0;
+}
+
+
+.violet_2 {
+	padding: 1.7% 0 3% 9.7%;
+	background-color: #0a0e34;
+	color: #fff;
+}
+
+.violet_2 h3::before {
+	content: "03";
+	font-size: 18px;
+	color: #9170EA;
+	margin-right: 10px;
+	margin-right: 10px;
+	border-bottom: 5px solid #fff;
 }
 
 
@@ -378,10 +327,22 @@ header{
 
 
 .active_img_1 {
-		width: 50%; 
-		overflow: hidden;
-		display: flex;
-		justify-content: center;
+	width: 50%; 
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+}
+
+.act_img {
+	position: relative;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.img_wdth {
+	height: 100%;
 }
 
 .active_text {
@@ -400,7 +361,7 @@ header{
 }
 
 .contact_text_content h2 {
-	padding: 24% 0 6% 19%;
+	padding: 24% 70px 6% 19%;
 }
 
 .contact_text_content .b2txt {
@@ -416,11 +377,12 @@ header{
 .box_number {
 	position: absolute;
 	width: 9%;
-	height: 21%;
+	height: 8.5vw;
 	background-color: #5e42b0;
 	top: 28%;
 	left: calc(50% - 8%/2);
 	color: #fff;
+	z-index: 10;
 }
 
 .box_content {
@@ -468,7 +430,8 @@ footer {
 	align-items: center;
 }
 
-.footer-overlay {
+footer::after {
+	content: " ";
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -478,7 +441,6 @@ footer {
 	z-index: 0;
 	background-color: #0a0e34;
 }
-
 
 .footer_tittle {
 	position: relative;
@@ -511,11 +473,20 @@ footer .app-btns {
 
 
 
-/*--------------------MEDIA_768px--------------------*/
+/*--------------------MEDIA_960px--------------------*/
 
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1100px) and (min-width: 961px) {
+
+	h2 {
+		font-size: 70px;
+	}
+
+}
+
+
+@media screen and (max-width: 960px) and (min-width: 641px) {
 	
 	h1 {
 		font-size: 64px;
@@ -549,80 +520,81 @@ footer .app-btns {
     	padding-bottom: 9%;
     }
 
-	.athlets {
-		padding-right: 54%;	
+    .ios {
+    	margin: 25px 10px;
+    }
+
+    .andr {
+    	margin: 25px 10px;
+    }
+
+    .athlets {
+    	font-size: 16px;
+    	overflow: hidden;
+    }
+
+    .athlets h2 {
+    	padding: 8% 0 0 38%;
+	}
+
+	.ath_img {
+		position: absolute;
+	    top: 11%;
+	    right: 56%;
+	}
+
+	.white_1 {
+    	padding: 1.5% 0 3% 38%;
+	}
+
+	.gray_1 {
+		padding: 3% 0 4% 38%;
+	}
+
+	.violet_1 {
+		padding: 2% 0 4% 38%;
+	}
+
+	.athlets .violet_1 p {
+		width: 95%;
+	}
+
+	.athlets p {
+    	width: 83%;
+    	line-height: 28px;
 	}
 
 	.players {
-		padding-top: 10px;
-		padding-left: 30%;	
+    	font-size: 16px;
+    }
+
+    .play_img {
+   	 	position: absolute;
+   	 	top: 6%;
+   	 	left: 55%;
 	}
 
-	.athlet_img {
-    	right: 39%;
-    	height: 48%;
-    	top: 5.5%;
+    .players p {
+    	width: 49%;
+    	line-height: 28px;
 	}
 
-	.player_img {
-		height: 40%;
-		left: 12%;		
+	.players h2 {
+   	    padding: 8% 0 0 4%;
 	}
 
-	.wrapper_block1 {
-		font-size: 16px;
-		line-height: 28px;
+	.white_2 {
+    	padding: 2% 0 3% 4%;
 	}
 
-	.white_position {
-		width: 63.5%;
-		margin-bottom: 28px;
-	}
+	.gray_2 {
+    	padding: 3% 0 4.5% 4%;
+    }
 
-	.white_content {
-		width: 82%;
-	}
+    .violet_2 {
+    	padding: 1.7% 0 4% 4%;
+    }
 
-	.white_big_tittle h2 {
-		padding: 15px 0;
-	}
-
-	#mobile_padding {
-		margin: 0px;
-	}
-
-	.white2_position {
-		justify-content: flex-start;
-		width: 60%;
-		padding-left: 32px;
-		margin-bottom: 0px;
-	}
-
-	.white2_content {
-		width: 100%;
-		margin-bottom: 5%;
-	}
-
-	.gray .white_position {
-		margin-bottom: 40px;
-	}
-
-	.violet .white_position {
-    margin: 3px 0 6px;
-}
-	
-	.violet_text {
-		padding-bottom: 6%;
-	}
-
-	.dark_purple .white2_position {
-   		margin-bottom: 0px;
-	}
-
-	.dark_purple .white2_position .white2_content {
-    	margin-top: 5px;
-    	margin-bottom: 7px;
-	}
 
 	.active {
 		flex-direction: column;
@@ -637,9 +609,6 @@ footer .app-btns {
 		height: 50%;
 	}
 
-	.img_wdth {
-		max-width: 100%;
-	}
 
 	.active_text {
 		width: 100%;
@@ -655,7 +624,7 @@ footer .app-btns {
 	}
 
 	.b2txt {
-    	padding: 1% 0 13% 4%;
+    	padding: 2% 0 13% 4%;
     	width: 83%;
 	}
 
@@ -675,7 +644,7 @@ footer .app-btns {
 	.box_number {
 		width: 116px;
 		height: 116px;
-		top: 55%;
+		top: 61%;
 		left: 4.5%;
 	}
 
@@ -751,28 +720,25 @@ footer .app-btns {
 		flex-direction: column;
 	}
 
-	.players {
-		padding-left: 46%;
-	}
-
 	.athlet_img {
     	right: 46%;
 	}
 }
 
-@media screen and (max-width: 480px) {
-	.box_number {
-		top: 46%;
-		width: 77px;
-		height: 77px;
-	}
+
+@media screen and (max-width: 641px) and (min-width: 480px) {
+	.athlets {
+    	height: 45%;
+	}	
+
 }
 
-/*--------------------MEDIA_320px--------------------*/
+
+/*--------------------MEDIA_640px--------------------*/
 
 
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 640px) {
 	
 	h1 {
 		font-size: 1.5rem;
@@ -782,11 +748,13 @@ footer .app-btns {
 	h2 {
 		font-size: 50px;
 		line-height: 30px;
+		padding: 17px 0;
 	}
 
 	h3 {
 		font-size: 23px;
 		line-height: 73%;
+		padding-bottom: 8%;
 	}
 
 	h4 {
@@ -801,6 +769,7 @@ footer .app-btns {
 	.banner-tittle {
 		font-size: 28px;
 		padding-top: 125px;
+		width: 88%;
 	}
 	
 	.line1 {
@@ -810,6 +779,8 @@ footer .app-btns {
 	.line2 {
 		line-height: 32px;
 		letter-spacing: 1px;
+		text-align: left;
+		padding-left: 16%;
 	}
 	
 	.app-btns {
@@ -845,94 +816,90 @@ footer .app-btns {
 		height: 24px; 
 	}
 
-	.athlet_img {
-    	height: 950px;
-    	margin-top: 21%;
-    	top: 0%;
-    	right: 0%;
-    	width: auto;
-	}
-
 	.athlets {
-		height: 31%;
-		padding-right: 84px;
-	}
-
-	.players {
-		height: 35%;
-		padding-left: 7px;
-		padding-top: 0px;
-	}
-
-	.player_img {
-    	height: 37%;
-    	left: 0%;
-    	top: 56%;
-	}
-
-	.wrapper_block1 {
-		font-size: 0.94rem;
-	}
-
-	.white_position {
-		width: 100%;
-	}
-
-	.white_content {
-		width: 100%;
-		padding: 10px;
-	}
-
-	.white_big_tittle {
-    	margin-top: 0px;
-	}
-
-	.white_text {
+		font-size: 15px;
 		line-height: 19px;
 	}
 
-	.gray_text {
-		line-height: 18px;
-		width: 94%
+	.athlets p {
+		width: 85%;
 	}
 
-	.violet_text {
-    	padding-bottom: 12%;
-    	width: 89%;
-    	line-height: 20px;
+	.ath_img {
+    	position: absolute;
+    	top: 7.5%;
+    	right: 50%;
+    	right: calc(50% - 200px/2);
 	}
 
-	.white_tittle {
-		margin-top: 34px;
-		margin-bottom: 18px;
+	.athlets h2 {
+    	padding: 7.5% 0 0 6%;
 	}
 
-	.white_position {
-    	margin-bottom: 48px;
+	.white_1 {
+    	padding: 334px 0 57px 6%;;
 	}
 
-	.white2_position {
-		width: 100%;
-		padding: 10px 0 0 20px;
+	.gray_1 {
+    	padding: 50px 0 50px 6%;
 	}
 
-	.white2_content {
-		margin-bottom: 18%;
+	.violet_1 {
+    	padding: 60px 0 50px 7%;
 	}
 
-	.gray2 .white2_position .white2_content {
-		padding-bottom: 0px;
-		margin-right: 25px; 
+	.players {
+		font-size: 15px;
+		line-height: 19px;
 	}
 
-	.dark_purple .white2_position .white2_content {
-    	margin-bottom: 18px;
+	.players p {
+		width: 85%;
 	}
 
+	.players h2 {
+    	padding: 25.5px 0 0 18px;
+	}
+
+	.play_img {
+    	top: 9%;
+    	left: calc(50% - 302px/2);
+	}
+
+	.white_2 {
+    	padding: 332px 0 60px 19px;
+	}
+
+	.gray_2 {
+    	padding: 51px 0 53px 19px;
+	}
+
+	.violet_2 {
+    	padding: 57.5px 0 52px 19px;
+    }
+
+	.active {
+		flex-direction: column;
+	}
+
+	.contact {
+		flex-direction: column-reverse;
+	}
+
+	.work {
+		flex-direction: column;
+	}
 	
+	.active_text {
+		width: 100%;
+	}
+
+	.active_img_1 {
+		width: 100%;
+	}
+
 	#mobile_padding {
-		padding-top: 106%;
-		padding-bottom: 7%;
+		padding-top: 95%;
 	}
 
 	#mobile_padding2 {
@@ -944,19 +911,23 @@ footer .app-btns {
 		width: 100%;
 	}
 
-	#mobile_h2 {
-		font-size: 1rem;
-	}
-
-
-	#mobile_h2 h2 {
+	.contact_text_content h2 {
 		font-size: 28px;
 	}
+
+	.active_text_content h2 {
+		font-size: 28px;
+	}
+
+	.work_text_content h2 {
+		font-size: 28px;
+	}
+
 
 	.box_number {
 		width: 70px;
 		height: 70px;
-		top: 52%;
+		top: 68%;
 		left: 7%;
 	}
 
@@ -982,21 +953,30 @@ footer .app-btns {
 	}
 
 	.active_text_content h2 {
-    	padding: 7% 0 4% 5%;
+    	padding: 9% 0 4.5% 5%;
 	}
 
 	.contact_text_content h2 {
-		padding: 7% 0 5% 4%;
+		padding: 9.5% 0 5% 4%;
 	}
 
 	.contact_text_content .b2txt {
     	width: 83%;
-    	padding: 0 0 26% 4%;
+    	padding: 0 0 25% 4%;
+	}
+
+	.work_text_content h2 {
+    	padding: 9% 0 2px 7%;
 	}
 
 	.work_text_content .b2txt {
 		width: 80%;
 		padding: 5% 0 21% 6%;
+	}
+
+	.footer_tittle {
+    	flex-direction: column;
+    	margin-top: 6%;
 	}
 
 	.footer_text h1 {
@@ -1020,11 +1000,17 @@ footer .app-btns {
 		width: 133px;
 		margin-bottom: 10%;
 	}
-
 }
 
-.pixel-perfect {
-  position: absolute;
-  top: -22px;
-  opacity: 0.15;
+	.pixel-perfect {
+	  position: absolute;
+	  top: -22px;
+	  opacity: 0.15;
+	}
+
+
+@media screen and (max-width: 320px) {
+	.box_number {
+		top: 71%;
+	}
 }
